--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-
+.idea/*
 # AWS User-specific
 .idea/**/aws.xml
 
@@ -186,3 +186,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,visualstudiocode,windows
+
+.idea/
